--- a/Project1/mainwindow.ui
+++ b/Project1/mainwindow.ui
@@ -175,7 +175,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Определить </string>
+     <string>Определить из файла</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_2">
@@ -211,7 +211,7 @@
      <x>0</x>
      <y>0</y>
      <width>683</width>
-     <height>21</height>
+     <height>18</height>
     </rect>
    </property>
   </widget>
